--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
+    "jquery": "^3.6.0",
     "next": "12.1.1",
+    "parsleyjs": "^2.9.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
